Host images locally and updated paths

--- a/index.html
+++ b/index.html
@@ -1365,7 +1365,7 @@
                 <div class="about-badge-text">Years<br />Experience</div>
               </div>
               <img
-                src="https://images.unsplash.com/photo-1504307651254-35680f356dfd?w=800&q=80"
+                src="./assets/imgs/1.jpeg"
                 alt="GRP manufacturing facility at Golden Sands of Abu Abali, Oman"
                 class="about-img-main"
                 width="600"
@@ -1373,7 +1373,7 @@
                 loading="lazy"
               />
               <img
-                src="https://images.unsplash.com/photo-1581092160562-40aa08e78837?w=400&q=80"
+                src="./assets/imgs/2.jpeg"
                 alt="Fiberglass product detail at Golden Sands manufacturing"
                 class="about-img-accent"
                 width="320"
@@ -1479,7 +1479,7 @@
             </div>
             <div class="vision-img-stack reveal">
               <img
-                src="https://images.unsplash.com/photo-1565043589221-1a6fd9ae45c7?w=700&q=80"
+                src="./assets/imgs/3.jpeg"
                 alt="GRP water storage tanks manufactured by Golden Sands of Abu Abali"
                 class="vision-img-1"
                 width="560"
@@ -1487,7 +1487,7 @@
                 loading="lazy"
               />
               <img
-                src="https://images.unsplash.com/photo-1513828583688-c52646db42da?w=500&q=80"
+                src="./assets/imgs/4.jpeg"
                 alt="Fiberglass construction quality at Golden Sands"
                 class="vision-img-2"
                 width="360"
@@ -1622,7 +1622,7 @@
           <div class="gallery-grid" role="list">
             <div class="gallery-item reveal" role="listitem">
               <img
-                src="https://images.unsplash.com/photo-1504307651254-35680f356dfd?w=1000&q=80"
+                src="./assets/imgs/5.jpeg"
                 alt="Large GRP water storage tanks manufactured by Golden Sands of Abu Abali in Oman"
                 class="gallery-img"
                 width="800"
@@ -1635,7 +1635,7 @@
             </div>
             <div class="gallery-item reveal" role="listitem">
               <img
-                src="https://images.unsplash.com/photo-1587293852726-70cdb56c2866?w=500&q=80"
+                src="./assets/imgs/6.jpeg"
                 alt="GRP bathroom cabin modular unit"
                 class="gallery-img"
                 width="400"
@@ -1648,7 +1648,7 @@
             </div>
             <div class="gallery-item reveal" role="listitem">
               <img
-                src="https://images.unsplash.com/photo-1513828583688-c52646db42da?w=500&q=80"
+                src="./assets/imgs/7.jpeg"
                 alt="GRP fiberglass doors and frames"
                 class="gallery-img"
                 width="400"
@@ -1661,7 +1661,7 @@
             </div>
             <div class="gallery-item reveal" role="listitem">
               <img
-                src="https://images.unsplash.com/photo-1565043589221-1a6fd9ae45c7?w=500&q=80"
+                src="./assets/imgs/8.jpeg"
                 alt="Industrial GRP septic tanks and section panel tanks"
                 class="gallery-img"
                 width="400"
@@ -1674,7 +1674,7 @@
             </div>
             <div class="gallery-item reveal" role="listitem">
               <img
-                src="https://images.unsplash.com/photo-1581093450021-4a7360e9a6b5?w=500&q=80"
+                src="./assets/imgs/9.jpeg"
                 alt="GRP manhole covers and infrastructure components"
                 class="gallery-img"
                 width="400"
@@ -1687,7 +1687,7 @@
             </div>
             <div class="gallery-item reveal" role="listitem">
               <img
-                src="https://images.unsplash.com/photo-1581092160562-40aa08e78837?w=500&q=80"
+                src="./assets/imgs/10.jpeg"
                 alt="Custom GRP cladding and architectural decoration"
                 class="gallery-img"
                 width="400"
@@ -1763,7 +1763,7 @@
             </div>
             <div class="why-visual reveal">
               <img
-                src="https://images.unsplash.com/photo-1504307651254-35680f356dfd?w=900&q=80"
+                src="./assets/imgs/11.jpeg"
                 alt="Golden Sands of Abu Abali manufacturing operations in Al Musannah, Oman"
                 class="why-img-full"
                 width="600"
@@ -1772,7 +1772,7 @@
               />
               <div class="why-img-row">
                 <img
-                  src="https://images.unsplash.com/photo-1565043589221-1a6fd9ae45c7?w=400&q=80"
+                  src="./assets/imgs/12.jpeg"
                   alt="GRP product manufacturing quality control"
                   class="why-img"
                   width="280"
@@ -1780,7 +1780,7 @@
                   loading="lazy"
                 />
                 <img
-                  src="https://images.unsplash.com/photo-1581093450021-4a7360e9a6b5?w=400&q=80"
+                  src="./assets/imgs/13.jpeg"
                   alt="Completed fiberglass products ready for delivery in Oman"
                   class="why-img"
                   width="280"
