--- a/index.html
+++ b/index.html
@@ -1365,7 +1365,7 @@
                 <div class="about-badge-text">Years<br />Experience</div>
               </div>
               <img
-                src="./assets/imgs/1.jpeg"
+                src="./assets/imgs/1.png"
                 alt="GRP manufacturing facility at Golden Sands of Abu Abali, Oman"
                 class="about-img-main"
                 width="600"
@@ -1373,7 +1373,7 @@
                 loading="lazy"
               />
               <img
-                src="./assets/imgs/2.jpeg"
+                src="./assets/imgs/5.png"
                 alt="Fiberglass product detail at Golden Sands manufacturing"
                 class="about-img-accent"
                 width="320"
@@ -1479,7 +1479,7 @@
             </div>
             <div class="vision-img-stack reveal">
               <img
-                src="./assets/imgs/3.jpeg"
+                src="./assets/imgs/11.png"
                 alt="GRP water storage tanks manufactured by Golden Sands of Abu Abali"
                 class="vision-img-1"
                 width="560"
@@ -1487,7 +1487,7 @@
                 loading="lazy"
               />
               <img
-                src="./assets/imgs/4.jpeg"
+                src="./assets/imgs/4.png"
                 alt="Fiberglass construction quality at Golden Sands"
                 class="vision-img-2"
                 width="360"
@@ -1622,7 +1622,7 @@
           <div class="gallery-grid" role="list">
             <div class="gallery-item reveal" role="listitem">
               <img
-                src="./assets/imgs/5.jpeg"
+                src="./assets/imgs/2.png"
                 alt="Large GRP water storage tanks manufactured by Golden Sands of Abu Abali in Oman"
                 class="gallery-img"
                 width="800"
@@ -1635,7 +1635,7 @@
             </div>
             <div class="gallery-item reveal" role="listitem">
               <img
-                src="./assets/imgs/6.jpeg"
+                src="./assets/imgs/9.png"
                 alt="GRP bathroom cabin modular unit"
                 class="gallery-img"
                 width="400"
@@ -1648,20 +1648,7 @@
             </div>
             <div class="gallery-item reveal" role="listitem">
               <img
-                src="./assets/imgs/7.jpeg"
-                alt="GRP fiberglass doors and frames"
-                class="gallery-img"
-                width="400"
-                height="300"
-                loading="lazy"
-              />
-              <div class="gallery-overlay">
-                <span class="gallery-label">GRP Doors</span>
-              </div>
-            </div>
-            <div class="gallery-item reveal" role="listitem">
-              <img
-                src="./assets/imgs/8.jpeg"
+                src="./assets/imgs/3.png"
                 alt="Industrial GRP septic tanks and section panel tanks"
                 class="gallery-img"
                 width="400"
@@ -1674,7 +1661,20 @@
             </div>
             <div class="gallery-item reveal" role="listitem">
               <img
-                src="./assets/imgs/9.jpeg"
+                src="./assets/imgs/10.png"
+                alt="GRP fiberglass doors and frames"
+                class="gallery-img"
+                width="400"
+                height="300"
+                loading="lazy"
+              />
+              <div class="gallery-overlay">
+                <span class="gallery-label">GRP Doors</span>
+              </div>
+            </div>
+            <div class="gallery-item reveal" role="listitem">
+              <img
+                src="./assets/imgs/8.png"
                 alt="GRP manhole covers and infrastructure components"
                 class="gallery-img"
                 width="400"
@@ -1687,7 +1687,7 @@
             </div>
             <div class="gallery-item reveal" role="listitem">
               <img
-                src="./assets/imgs/10.jpeg"
+                src="./assets/imgs/13.png"
                 alt="Custom GRP cladding and architectural decoration"
                 class="gallery-img"
                 width="400"
@@ -1763,7 +1763,7 @@
             </div>
             <div class="why-visual reveal">
               <img
-                src="./assets/imgs/11.jpeg"
+                src="./assets/imgs/12.png"
                 alt="Golden Sands of Abu Abali manufacturing operations in Al Musannah, Oman"
                 class="why-img-full"
                 width="600"
@@ -1772,7 +1772,7 @@
               />
               <div class="why-img-row">
                 <img
-                  src="./assets/imgs/12.jpeg"
+                  src="./assets/imgs/6.png"
                   alt="GRP product manufacturing quality control"
                   class="why-img"
                   width="280"
@@ -1780,7 +1780,7 @@
                   loading="lazy"
                 />
                 <img
-                  src="./assets/imgs/13.jpeg"
+                  src="./assets/imgs/7.png"
                   alt="Completed fiberglass products ready for delivery in Oman"
                   class="why-img"
                   width="280"
@@ -1842,7 +1842,8 @@
                     <div class="contact-item-label">Phone / WhatsApp</div>
                     <div class="contact-item-value">
                       <a href="tel:+96896060358">+968 96060358</a><br />
-                      <a href="tel:+96879893268">+968 79893268</a>
+                      <a href="tel:+96879893268">+968 79893268</a><br />
+                      <a href="tel:+96893665602">+968 93665602</a>
                     </div>
                   </div>
                 </div>
